wcm-bpm-service/wcm-bpm-boot/openshift/4-app-setup-build-deploy/9-openshift-demo-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/openshift-demo
    fabric8.io/scm-tag: HEAD
  labels:
    expose: "true"
    app: openshift-demo
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.bpwizard.openshift
  name: openshift-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: openshift-demo
